# spec

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  spec-v1.json  tsconfig.json  tsup.config.base.ts  tsup.config.ts  turbo.json  vitest.config.mts
.changeset/: README.md  bold-spiders-rest.md  breezy-jeans-admire.md  config.json  happy-parents-know.md  hip-snakes-sin.md  keen-zebras-melt.md  pre.json  release-1-6-0.md  spotty-cases-smash.md  verify-trusted-publishing.md
.github/workflows/: ci.yml  main.yml  release.yml
generators/: index.ts
generators/docs/: index.ts
generators/gen-docs/: package.json
generators/gen-json-schema/: package.json
generators/gen-rs-nodes/: package.json
generators/gen-ts-node-types/: CHANGELOG.md  package.json  tsconfig.json
generators/gen-ts-nodes/: package.json
generators/json-schema/: index.ts
generators/json-spec/: index.ts
js/node-types/: .prettierignore  package.json  tsconfig.declarations.json  tsconfig.json  vitest.config.mts
rust/codama-nodes/: Cargo.toml
rust/codama-nodes-derive/: Cargo.toml
rust/codama-nodes-derive/src/: lib.rs
rust/codama-nodes/src/: lib.rs
spec/: CHANGELOG.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.mts
src/: index.ts
tests/: compounds.test.ts  defineEnumeration.test.ts  defineUnion.test.ts  primitives.test.ts  v1.test.ts  validate.test.ts
v1/: schema.json  spec.json
(+281 files in other folders)
