[package]
name = "codama-nodes-derive"
description = "Procedural macros for the Codama node specification"
version = "0.9.2"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[package.metadata.codama]
spec = "1.6.0"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
